[tool.poetry]
name = "custom-azure-key-vault-action"
version = "0.1.0"
description = ""
authors = ["Murad Sater <murad.sater@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.7"
azure-identity = "^1.5.0"
azure-keyvault-secrets = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
